OpenEXR output different when frame saved with F3 vs. in an animation #46748

Closed
opened 2015-11-12 07:27:08 +01:00 by Sam Brubaker · 4 comments

Version 2.76b (Linux 64bit)

EXR_bug.blend

How to reproduce:
Open the attached file (just a monkey), and inspect the OpenEXR output settings.
Render with animation=True (ctrl+F12) so that Blender automatically outputs the one frame.
Render the same frame again and save the OpenEXR image with F3 using exactly the same output settings as before.
Inspect the two frame files and notice that one is much bigger than the other.

Expected behavior:
Both files should be identical, right?

I don't have the expertise to figure out the precise difference between these two outputs, but it seems that one of two things is happening: either Blender is outputting an OpenEXR image with more data than is needed when rendering an animation sequence, or worse, some data is lost when the image is saved with F3. In either case, there must be some parameter (color depth, compression, etc.) that is not being obeyed.

Please help me figure out what's going on here!

Version 2.76b (Linux 64bit) [EXR_bug.blend](https://archive.blender.org/developer/F254125/EXR_bug.blend) How to reproduce: Open the attached file (just a monkey), and inspect the OpenEXR output settings. Render with animation=True (ctrl+F12) so that Blender automatically outputs the one frame. Render the same frame again and save the OpenEXR image with F3 using exactly the same output settings as before. Inspect the two frame files and notice that one is much bigger than the other. Expected behavior: Both files should be identical, right? I don't have the expertise to figure out the precise difference between these two outputs, but it seems that one of two things is happening: either Blender is outputting an OpenEXR image with more data than is needed when rendering an animation sequence, or worse, some data is lost when the image is saved with F3. In either case, there must be some parameter (color depth, compression, etc.) that is not being obeyed. Please help me figure out what's going on here!
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @rocketman

Added subscriber: @rocketman

This issue was referenced by 19cdceaee4

This issue was referenced by 19cdceaee415ddba7e3a197e1e2487ae09d766a8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46748
No description provided.